# code-sandbox

./: .fips-template.yaml  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  Containerfile  Makefile  NEXT_SESSION.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  ctf-finding.yml  escape_vector.yml  feature_request.yml
.github/workflows/: ci.yml
chart/: Chart.yaml  README.md  values-ctf.yaml  values-standalone.yaml  values.yaml
chart/policies/: copy-fail-mitigation-policy.yaml
chart/templates/: _helpers.tpl  deployment.yaml  fips-test-job.yaml  networkpolicy.yaml  route.yaml  seccomp-profile.yaml  service.yaml
docs/: blind-attacker-runner.md  ctf.md  fips-compliance.md  informed-attacker-runner.md  landlock-openshift-feasibility.md  pentest-report.md  sandbox-alternatives-evaluation.md  sandbox-egress-networkpolicy-vs-opa.md  sandbox-hardening-v2.md  separate-pod-design.md
research/: README.md  paper-defense-in-depth.md  python-sandbox-landscape.md
sandbox/: app.py  audit.py  executor.py  guardrails.py  landlock.py  patterns.py  pipeline.py  profiles.py  seccomp.py  tool_inspector.py
sandbox/profiles/: data-science-requirements.txt  data-science.yaml  minimal-requirements.txt  minimal.yaml
tests/: conftest.py  test_app.py  test_audit.py  test_escape_vectors.py  test_executor.py  test_guardrails.py  test_integration.py  test_landlock.py  test_pipeline.py  test_profiles.py  test_seccomp.py  test_tool_inspector.py
